--- a/product-detail.html
+++ b/product-detail.html
@@ -16,7 +16,7 @@
 
    <header>
       <nav class="navbar">
-         <a class="navbar-logo" href="/">
+         <a class="navbar-logo" href="index.html">
             <img src="assets/images/logo.png" alt="Muller logo">
          </a>
          <div class="navbar-ico navbar-menu" href="#">
@@ -272,7 +272,7 @@
                <div id="footer-navigation" class="secondary-menu" style="opacity: 1;">
                   <ul>
                      <li class="">
-                        <a href="#" target="" class="link link-muller">
+                        <a href="index.html" target="" class="link link-muller">
                            Home
                            <svg class="link-graphic link-graphic-slide" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
                               <path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"></path>
@@ -280,7 +280,7 @@
                         </a>
                      </li>
                      <li class="">
-                        <a href="#" target="" class="link link-muller">
+                        <a href="about-us.html" target="" class="link link-muller">
                            About us
                            <svg class="link-graphic link-graphic-slide" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
                               <path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"></path>
@@ -288,7 +288,7 @@
                         </a>
                      </li>
                      <li class="">
-                        <a href="#" target="" class="link link-muller">
+                        <a href="testimonial.html" target="" class="link link-muller">
                            Testimonials
                            <svg class="link-graphic link-graphic-slide" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
                               <path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"></path>
@@ -296,7 +296,7 @@
                         </a>
                      </li>
                      <li class="">
-                        <a href="#" target="" class="link link-muller">
+                        <a href="medical-tourism.html" target="" class="link link-muller">
                            Medical Tourism
                            <svg class="link-graphic link-graphic-slide" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
                               <path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"></path>
@@ -304,7 +304,7 @@
                         </a>
                      </li>
                      <li class="">
-                        <a href="#" target="" class="link link-muller">
+                        <a href="contact-us.html" target="" class="link link-muller">
                            Contact Us
                            <svg class="link-graphic link-graphic-slide" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
                               <path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"></path>
@@ -334,7 +334,6 @@
             <div class="hero-text">
                <div class="breadcrumbs">
                   <ul>
-<<<<<<< HEAD
                      <li><a href="javascript:void();">Momenti di piacere</a></li>
                      <li>Il piacere dei contrasti</li>
                   </ul>
@@ -343,7 +342,6 @@
                   La bellezza negli opposti
                </h1>
                <p class="text-smaller">Solo per te, alcuni argomenti da gustare per riflettere e aprire la mente.</p>
-=======
                      <li><a href="javascript:void();">HOME</a></li>
                      <li>ARTIFICIAL LIMB FOR LOWER EXTREMITY</li>
                   </ul>
@@ -352,7 +350,6 @@
                   Artificial limb for lower extremity 
                </h1>
                <p class="text-smaller">View products</p>
->>>>>>> a4703a05a8ce8872a0a9fc36dae9725555bd5ad5
                <a href="#page">
                <img class="page-arrow-down bounce" alt="" src="assets/images/arrow-white-down.png" width="24" height="27">
                </a>
