--- a/gallery.html
+++ b/gallery.html
@@ -22,7 +22,7 @@
 
    <header>
       <nav class="navbar">
-         <a class="navbar-logo" href="/">
+         <a class="navbar-logo" href="gallery.html">
             <img src="assets/images/logo.png" alt="Muller logo">
          </a>
          <div class="navbar-ico navbar-menu" href="#">
