--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
    <header>
       <nav class="navbar">
-         <a class="navbar-logo" href="/">
+         <a class="navbar-logo" href="index.html">
             <img src="assets/images/logo.png" alt="Muller logo">
          </a>
          <div class="navbar-ico navbar-menu" href="#">
