--- a/product-listing-demo.html
+++ b/product-listing-demo.html
@@ -21,7 +21,7 @@
 
    <header>
       <nav class="navbar">
-         <a class="navbar-logo" href="/">
+         <a class="navbar-logo" href="index.html">
             <img src="assets/images/logo.png" alt="Muller logo">
          </a>
          <div class="navbar-ico navbar-menu" href="#">
@@ -277,7 +277,7 @@
                <div id="footer-navigation" class="secondary-menu" style="opacity: 1;">
                   <ul>
                      <li class="">
-                        <a href="#" target="" class="link link-muller">
+                        <a href="index.html" target="" class="link link-muller">
                            Home
                            <svg class="link-graphic link-graphic-slide" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
                               <path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"></path>
@@ -285,7 +285,7 @@
                         </a>
                      </li>
                      <li class="">
-                        <a href="#" target="" class="link link-muller">
+                        <a href="about-us.html" target="" class="link link-muller">
                            About us
                            <svg class="link-graphic link-graphic-slide" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
                               <path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"></path>
@@ -293,7 +293,7 @@
                         </a>
                      </li>
                      <li class="">
-                        <a href="#" target="" class="link link-muller">
+                        <a href="testimonial.html" target="" class="link link-muller">
                            Testimonials
                            <svg class="link-graphic link-graphic-slide" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
                               <path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"></path>
@@ -301,7 +301,7 @@
                         </a>
                      </li>
                      <li class="">
-                        <a href="#" target="" class="link link-muller">
+                        <a href="medical-tourism.html" target="" class="link link-muller">
                            Medical Tourism
                            <svg class="link-graphic link-graphic-slide" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
                               <path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"></path>
@@ -309,7 +309,7 @@
                         </a>
                      </li>
                      <li class="">
-                        <a href="#" target="" class="link link-muller">
+                        <a href="contact-us.html" target="" class="link link-muller">
                            Contact Us
                            <svg class="link-graphic link-graphic-slide" width="300%" height="100%" viewBox="0 0 1200 60" preserveAspectRatio="none">
                               <path d="M0,56.5c0,0,298.666,0,399.333,0C448.336,56.5,513.994,46,597,46c77.327,0,135,10.5,200.999,10.5c95.996,0,402.001,0,402.001,0"></path>
