--- a/medical-tourism.html
+++ b/medical-tourism.html
@@ -481,6 +481,10 @@
 
  </div>
 
+ <div class="w-100 text-center">
+   <button type="button" class="btn btn-primary">PROCEED</button>
+ </div>
+
 
          </div>
 
