--- a/listing-details.html
+++ b/listing-details.html
@@ -531,6 +531,17 @@
                      </li>                  
                   </ul>
                </div>
+               <div class="footerLink">
+                  <ul>
+                     <li><a href="get-quote.html">Get A Quote</a></li>
+                     <li><a href="track-order.html">Track Order</a></li>
+                     <li><a href="gallery.html">Photos</a></li>
+                     <li><a href="">Videos</a></li>
+                     <li><a href="testimonial.html">Testimonials</a></li>
+                     <li><a href="">Downloads</a></li>
+                     
+                  </ul>
+               </div>
                <div class="credits">
                   <p><span>©</span> Copyright. All rights reserved <a href="https://www.raphadon.org/">Raphadon</a></p>
                </div>
